--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,11 @@ crate-type = ["cdylib"]
 [dependencies]
 napi        = "2"
 napi-derive = "2"
-dicom = "0.5.4"
-dicom-pixeldata = { version = "0.1.5"}
-#dicom-pixeldata = { git = "https://github.com/Enet4/dicom-rs.git", branch = "bug/346" }
-image = "0.24.5"
-base64 = "0.13"
+#dicom = "0.5.4"
+#dicom-pixeldata = { version = "0.1.5"}
+##dicom-pixeldata = { git = "https://github.com/Enet4/dicom-rs.git", branch = "bug/346" }
+#image = "0.24.5"
+#base64 = "0.13"
 
 [build-dependencies]
 napi-build = "2"
